# misis2024s-21-03-grachev-k-y

./: .gitignore  CMakeLists.txt  README.md  status.md
ReportCreator/: CMakeLists.txt  ReportCreator.cpp  ReportCreator.h
export/course_work/: BGR.json  HSV.json
export/lab01/: report.md
export/lab02/: report.md
export/lab03/: report.md
export/lab04/: detections1.json  detections2.json  detections3.json  detections4.json  ground_truth.json  ground_truth1.json  ground_truth2.json  ground_truth3.json  ground_truth4.json  report.md
export/lab05/: report.md
export/lab06/: detections1.json  detections2.json  detections3.json  detections4.json  report.md
prj.cw/: BlastCellDetection.cpp  BlastCellDetection.h  CMakeLists.txt  README.md  main.cpp
prj.lab/lab01/: CMakeLists.txt  lab01.cpp
prj.lab/lab02/: CMakeLists.txt  lab02.cpp
prj.lab/lab03/: CMakeLists.txt  lab03.cpp
prj.lab/lab04/: CMakeLists.txt  lab04.cpp
prj.lab/lab05/: CMakeLists.txt  lab05.cpp
prj.lab/lab06/: CMakeLists.txt  lab06.cpp
prj.lab/lab07/: CMakeLists.txt
prj.lab/lab08/: CMakeLists.txt
prj.lab/lab09/: CMakeLists.txt  lab09.cpp
